# FLIR_tools

./: README.md
ir_converter/: CMakeLists.txt  package.xml
ir_converter/src/: false_color.cpp  ir_converter.cpp
ir_viewer/: CMakeLists.txt  package.xml
ir_viewer/include/: falsecolor.h
ir_viewer/src/: false_color.cpp  ir_converter.cpp  ir_viewer.cpp
